--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -993,7 +993,7 @@
                    class="nav-subitem {% if request.endpoint and 'video_title_tags' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-sparkle"></i>
-                    <span>Title & More</span>
+                    <span>Upload Studio</span>
                 </a>
                 {% endif %}
 
