--- a/app/templates/teams/dashboard.html
+++ b/app/templates/teams/dashboard.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="permission-item">
                         <input type="checkbox" id="perm_video_title">
-                        <label for="perm_video_title">Title & More</label>
+                        <label for="perm_video_title">Upload Studio</label>
                     </div>
                     <div class="permission-item">
                         <input type="checkbox" id="perm_optimize_video">
@@ -519,7 +519,7 @@ function editPermissions(memberId, permissions) {
                 { id: 'analyze_video', label: 'Analyze Video' },
                 { id: 'competitors', label: 'Competitors' },
                 { id: 'video_script', label: 'Video Script' },
-                { id: 'video_title', label: 'Title & More' },
+                { id: 'video_title', label: 'Upload Studio' },
                 { id: 'optimize_video', label: 'Optimize Video' },
                 { id: 'thumbnail', label: 'Thumbnail' }
             ]
